<resources>
    <string-array name="Preguntas">
        <item>Selecciona una pregunta de seguridad</item>
        <item>Donde nací</item>
        <item>Nombre de mi primera mascota</item>
        <item>Nombre de mi primer centro de estudios</item>
        <item>Nombre de mi madre</item>
    </string-array>
    <string-array name="Categorias">
        <item>Categoria 1</item>
        <item>Categoria2</item>
        <item>Categoria3</item>
        <item>Cat4</item>
    </string-array>
    <string name="app_name">QRemember</string>
    <string name="bienvenida">Bienvenido a QRemember</string>
    <string name="acceder">Acceder</string>
    <string name="registrar">Registrar</string>
    <string name="usuario">Usuario (e-mail)</string>
    <string name="contrasenia">Contraseña</string>
    <string name="nombre">Nombre</string>
    <string name="modificar_contrasenia">Modificar contraseña</string>
    <string name="olvidar_contrasenia">¿Has olvidado la contraseña?</string>
    <string name="pulsame">Pulsa aqui</string>
    <string name="nuevo">Nuevo&#8230;</string>
    <string name="nueva">Nueva&#8230;</string>
    <string name="ver">Ver enlace</string>
    <string name="eliminar">Eliminar</string>
    <string name="modificar">Modificar</string>
    <string name="compartir">Compartir</string>
    <string name="categoria">Categoria</string>
    <string name="mail">E-mail</string>
    <string name="seleccionar">Seleccionar</string>
    <string name="opciones">Opciones</string>
    <string name="enlace">Enlace</string>
    <string name="seguro_eliminar_lugar">¿Seguro que deseas eliminar el lugar?</string>
    <string name="seguro_eliminar_cuenta">¿Seguro que deseas eliminar tu cuenta?</string>
    <string name="eliminar_cuenta_tv">Por favor introduce tu email y contraseña y después pulsa confirmar para eliminar tu cuenta o pulsa atrás para cancelar</string>
    <string name="si">Si</string>
    <string name="no">No</string>
    <string name="pregunta_seguridad">Introduce una pregunta de seguridad</string>
    <string name="respuesta">Introduce una respuesta</string>
    <string name="descripcion_imagen">Imagen de lugar</string>
    <string name="nueva_imagen">Nueva Imagen&#8230;</string>
    <string name="eliminar_imagen">Eliminar Imagenes</string>
    <string name="lugar">Lugar</string>
    <string name="ruta">Ruta</string>
    <string name="filtro_cat">Filtrar categoria</string>
    <string name="categorias">Categorias</string>
    <string name="lugares">Lugares</string>
    <string name="rutas">Rutas</string>
    <string name="salir">Salir</string>
    <string name="eliminar_usuario">Eliminar cuenta</string>
    <string name="desde_camara">Desde cámara</string>
    <string name="desde_galeria">Desde galeria</string>
    <string name="modificar_imagen">Modificar Imagen</string>
    <string name="confirmar">Confirmar</string>
    <string name="cancelar">Cancelar</string>
    <string name="email_usuario">E-mail Usuario</string>
    <string name="conmigo">Compartido conmigo</string>
    <string name="opc">Opciones</string>
    <string name="err_usuario">El email indicado no ha sido encontrado</string>
    <string name="err_contrasenia">Contraseña incorrecta</string>
    <string name="err">Error</string>
    <string name="register_correct">Registro completado</string>
    <string name="register_ok">Usuario registrado correctamente</string>
    <string name="todo">//TODO</string>
    <string name="comprobar_pregunta_seguridad">Comprobar</string>
    <string name="pregunta_recuperacion">Pregunta de recuperacion</string>
    <string name="respuesta_recuperacion">Respuesta de recuperacion</string>
    <string name="nueva_pass">Introduce la nueva Contraseña</string>
    <string name="nueva_pass_confirmar">Confirme la nueva Contraseña</string>
    <string name="form_err">Revisar el formulario</string>
    <string name="recuperando_contrasenia">Recuperar contraseña de </string>
    <string name="no_coinciden">Las contraseñas no coinciden</string>
    <string name="seleccione_pregunta">Seleccione una pregunta de seguridad</string>
    <string name="tomar_foto">Tomar foto</string>
    <string name="escribe_nombre">Escribe el nombre del lugar</string>
    <string name="modifica_nombre">Escribe el nombre del lugar\ndejalo en blanco para no modificarlo</string>
    <string name="modifica_nombre_ruta">Escribe el nombre de la ruta\ndejalo en blanco para no modificarlo</string>
    <string name="nombre_nueva_ruta">Escribe el nombre de la ruta</string>
    <string name="selecciona_categoria">Selecciona las categorias del lugar</string>
    <string name="selecciona_lugares">Selecciona los lugares que componen la ruta</string>
    <string name="selecciona_categorias_ruta">Selecciona las categorias de la ruta</string>
    <string name="pulsa_tomar_foto">Pulsa aqui para tomar una foto del lugar</string>
    <string name="insert_err">No se ha podido registar el usuario</string>
    <string name="err_pass_format">Introduzca una contraseña de 6 o mas caracteres con 1 mayuscula 1 minuscula y un número</string>
    <string name="err_email_format">Introduzca un email valido</string>
    <string name="err_respuesta_form">Introduzca una respuesta para recuperar su cuenta</string>
    <string name="err_ubicacion">No se pudo obtener acceso a la ubicación</string>
    <string name="err_qr_lectura">Error en la lectura del codigo QR</string>
    <string name="nuevo_lugar">Nuevo lugar</string>
    <string name="err_resp_incorrecta">Respuesta Incorrecta</string>
    <string name="err_preg_seg_incorrecta">Pregunta de seguridad Incorrecta</string>
    <string name="err_email_incorrecto">Email incorrecto</string>
    <string name="err_intentos">Has superado los 3 intentos de recuperacion</string>
    <string name="msg_eliminar">¿Seguro deseas eliminar las imagenes seleccionadas?</string>
    <string name="msg_aviso">Aviso</string>
    <string name="err_no_imagen">No se ha seleccionado ninguna imagen</string>
    <string name="seguro_salir">¿Seguro que deseas salir?</string>
    <string name="lugar_registrado_ok">Lugar registrado correctamente</string>
    <string name="lugar_registrado_almacenado_usuario">El lugar ya estaba en la base de datos, se ha almacenado en tu cuenta y se ha añadido la foto</string>
    <string name="lugar_registrado_err">El lugar ya esta registrado en tu cuenta</string>
    <string name="compartir_lugar">Compartir lugar</string>
    <string name="compartir_lugar_msg">Escribe el email del usuario con el cual compartir el lugar y pulsa compartir</string>
    <string name="compartir_ruta_msg">Escribe el email del usuario con el cual compartir la ruta y pulsa compartir</string>
    <string name="err_desconocido">Ha ocurrido un error</string>
    <string name="msg_ya_registrado">El usuario ya tiene este lugar entre sus lugares</string>
    <string name="msg_ya_compartido">El lugar ya ha sido compartido con el usuario</string>
    <string name="msg_compartido_ok">Lugar compartido correctamente</string>
    <string name="aceptar">Aceptar</string>
    <string name="rechazar">Rechazar</string>
    <string name="ver_ruta">Ver Ruta</string>
    <string name="mapa">Mapa de la ruta</string>
    <string name="mapa_de_ruta">Mapa de la ruta: </string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="modificar_ruta">\"Modificar ruta \"</string>
    <string name="nueva_ruta">Nueva Ruta</string>
    <string name="err_categorias">Ha ocurrido un error obteniendo las categorias</string>
    <string name="err_lugares">Ha ocurrido un error obteniendo los lugares</string>
    <string name="aviso_nueva_ruta">Debes seleccionar al menos 2 lugares para crear una ruta</string>
    <string name="aviso_nombre">Debes introducir un nombre</string>
    <string name="aviso_selecciona_categoria">Debes seleccionar al menos una categoria</string>
    <string name="nombre_repetido">Ya hay una ruta con ese nombre en tu cuenta</string>
    <string name="seguro_eliminar_ruta">¿Seguro que deseas eliminar la ruta?</string>
    <string name="act_compartir_ruta">Compartir Ruta</string>
    <string name="msg_ruta_repetida">El usuario ya tiene una ruta con ese nombre</string>
    <string name="msg_ruta_ya_compartida">Esta ruta ya ha sido compartida con el usuario</string>
    <string name="msg_compartida_ok">La ruta ha sido compartida correctamente</string>
    <string name="imagenes">Imagenes</string>
    <string name="msg_selecciona_imagen">No hay seleccionada ninguna imagen para eliminar</string>
    <string name="msg_campo_vacio">No se ha rellenado alguno de los campos los campos</string>
</resources>