<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/lyLugar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/ivFoto"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0"
            android:contentDescription="@string/descripcion_imagen"
            android:maxWidth="150dp"
            android:maxHeight="150dp"
            android:minWidth="150dp"
            android:minHeight="150dp"
            app:srcCompat="@mipmap/ic_launcher_round"
            tools:ignore="ImageContrastCheck" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="2"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:hint="@string/nombre"
                android:textColorHint="#78909C"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/tvCategoria"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="@string/categoria"
                android:textColorHint="#78909C"
                android:textSize="24sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnVer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ver" />

            <Button
                android:id="@+id/btnCompartir"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/compartir" />

            <Button
                android:id="@+id/btnModificar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/modificar" />

            <Button
                android:id="@+id/btnEliminar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/eliminar" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>