<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/watercolor_background"
    tools:context=".activities.StartActivity">

    <EditText
        android:id="@+id/tvContrasenia"
        style="@style/Widget.AppCompat.Light.AutoCompleteTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="29dp"
        android:autofillHints="@string/contrasenia"
        android:ems="10"
        android:hint="@string/contrasenia"
        android:inputType="textPassword"
        android:minWidth="200dp"
        android:minHeight="48dp"
        android:text=""
        android:textColorHint="#6D4C41"
        app:layout_constraintStart_toStartOf="@+id/tvUsuario"
        app:layout_constraintTop_toBottomOf="@+id/tvUsuario"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/tvOlvidar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="13dp"
        android:layout_marginTop="26dp"
        android:text="@string/olvidar_contrasenia"
        app:layout_constraintStart_toStartOf="@+id/tvContrasenia"
        app:layout_constraintTop_toBottomOf="@+id/tvContrasenia" />

    <TextView
        android:id="@+id/tvPulsaAqui"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="42dp"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:gravity="center"
        android:minHeight="48dp"
        android:text="@string/pulsame"
        android:textColor="@color/azul_2"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/tvOlvidar"
        app:layout_constraintTop_toBottomOf="@+id/tvOlvidar" />

    <EditText
        android:id="@+id/tvUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:autofillHints="@string/usuario"
        android:ems="10"
        android:hint="@string/usuario"
        android:inputType="textEmailAddress"
        android:minWidth="200dp"
        android:minHeight="48dp"
        android:text=""
        android:textColorHint="#6D4C41"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/btnRegistrar"
        style="@style/ShapeAppearanceOverlay.Material3.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="42dp"
        android:layout_marginTop="39dp"
        android:text="@string/registrar"
        app:layout_constraintStart_toEndOf="@+id/tvPulsaAqui"
        app:layout_constraintTop_toBottomOf="@+id/tvPulsaAqui" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="39dp"
        android:text="@string/acceder"
        app:layout_constraintEnd_toStartOf="@+id/tvPulsaAqui"
        app:layout_constraintTop_toBottomOf="@+id/tvPulsaAqui" />

</androidx.constraintlayout.widget.ConstraintLayout>