<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/watercolor_background"
    android:orientation="vertical">

    <Button
        android:id="@+id/btnTomarFoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="65dp"
        android:text="@string/tomar_foto"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <ListView
        android:id="@+id/lvCategoriasNuevoLugar"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="15dp"
        android:choiceMode="multipleChoice"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSeleccionaCategoria" />

    <TextView
        android:id="@+id/tvLugar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="21dp"
        android:layout_marginTop="41dp"
        android:layout_marginBottom="19dp"
        android:text="@string/escribe_nombre"
        app:layout_constraintBottom_toTopOf="@+id/tvNombreLugar"
        app:layout_constraintStart_toStartOf="@+id/tvNombreLugar"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvSeleccionaCategoria"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:text="@string/selecciona_categoria"
        app:layout_constraintBottom_toTopOf="@+id/lvCategoriasNuevoLugar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvNombreLugar" />

    <EditText
        android:id="@+id/tvNombreLugar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginBottom="38dp"
        android:ems="10"
        android:hint="@string/lugar"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="@color/gris"
        app:layout_constraintBottom_toTopOf="@+id/tvSeleccionaCategoria"
        app:layout_constraintStart_toStartOf="@+id/tvSeleccionaCategoria"
        app:layout_constraintTop_toBottomOf="@+id/tvLugar" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="27dp"
        android:text="@string/pulsa_tomar_foto"
        app:layout_constraintBottom_toTopOf="@+id/btnTomarFoto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lvCategoriasNuevoLugar" />

</androidx.constraintlayout.widget.ConstraintLayout>