<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/watercolor_background">

    <TextView
        android:id="@+id/tvListView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="124dp"
        android:layout_marginBottom="23dp"
        android:text="@string/selecciona_lugares"
        app:layout_constraintBottom_toTopOf="@+id/lvLugaresModificarRuta"
        app:layout_constraintStart_toStartOf="@+id/lvLugaresModificarRuta" />

    <Button
        android:id="@+id/btnModificarRutaConfirmar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="51dp"
        android:text="@string/modificar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ListView
        android:id="@+id/lvLugaresModificarRuta"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="10dp"
        android:choiceMode="multipleChoice"
        app:layout_constraintBottom_toBottomOf="@+id/lvCategoriasModificarRuta"
        app:layout_constraintEnd_toStartOf="@+id/lvCategoriasModificarRuta"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/lvCategoriasModificarRuta"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <ListView
        android:id="@+id/lvCategoriasModificarRuta"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="23dp"
        android:layout_marginBottom="19dp"
        app:layout_constraintBottom_toTopOf="@+id/btnModificarRutaConfirmar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/lvLugaresModificarRuta"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="145dp"
        android:layout_marginEnd="177dp"
        android:text="@string/selecciona_categorias_ruta"
        app:layout_constraintEnd_toEndOf="@+id/lvCategoriasModificarRuta"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="126dp"
        android:text="@string/modifica_nombre_ruta"
        android:textAlignment="center"
        app:layout_constraintEnd_toStartOf="@+id/textView8"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/tvModificarNombreRuta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="7dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/ruta"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="#78909C"
        app:layout_constraintStart_toStartOf="@+id/tvTextView"
        app:layout_constraintTop_toBottomOf="@+id/tvTextView" />
</androidx.constraintlayout.widget.ConstraintLayout>